quick website update with cv and sbpso review

--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
           <h2>About</h2>
           <p>Hello traveller, welcome to my personal portfolio.<br> I'm Jean-Pierre, a Stellenbosch University Computer
             Science student.
-            I'm currently doing my Masters degree in Computational Intelligence under the supervision of Professor A.P.
+            I'm currently doing my PhD in machine learning and artificial intelligence under the supervision of Professor A.P.
             Engelbrecht. <br><br>
-            For the past few years that I've been studying here, I've stayed in Majuba Men's Residence and had the
-            privilege to serve on the leadership of the House.
+            I lived in Majuba Men's Residence and had the privilege to serve on the leadership of the House.
             My experiences on the House Committee, as Primarius and as Vice-Primarius have taught me a lot about myself
             and made me a more rounded person.
             These experiences have taught me how to lead, manage my time, make sacrifices and to be part of something
@@ -90,14 +89,11 @@
             <h3>Personal information.</h3>
             <p class="font-italic">
               I like open-source, but I like money more. Although I donate to Wikipedia so I guess that's a start.<br>
-              The only social media I have is Linkedin, for a few reasons. Most social media platforms are designed to
-              subconsiously addict you to their product, I don't appreciate that.
-              Many of these tech companies follow the privacy laws (which can't keep up with innovation to start with)
-              just enough so that their actions aren't classified as spying;
+              The only social media I have is LinkedIn, for a few reasons. Most social media platforms are designed to subconsciously addict you to their product, I don't appreciate that.
+              Many of these tech companies follow the privacy laws (which can't keep up with innovation to start with) just enough so that their actions aren't classified as spying;
               but they have no respect for your privacy.<br>
-              Removing social media from your life can be described as liberating, and certainly makes you more
-              productive. A majorly overlooked aspect of our 21st centuary lives is our relationship with our
-              smartphones.
+              Removing social media from your life can be described as liberating, and certainly makes you more productive.
+              A hugely overlooked aspect of our 21st century lives is our relationship with our smartphones.
               Make sure that you use your smartphone, and not that it controls you.
             </p>
             <div class="row">
@@ -366,6 +362,16 @@
 
         <div class="row">
           <!-- Start Publications -->
+
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bx bxs-book"></i></div>
+            <h4 class="title"><a href="/assets/documents/sbpso-review.pdf" target="_blank">Set-Based Particle Swarm Optimisation: A Reivew</a></h4>
+            <p class="description">
+              The main objective of this paper is to review the set-based particle swarm optimisation algorithm and to provide an overview of the problems to which the algorithm has been applied. 
+              <a href="https://www.mdpi.com/2227-7390/11/13/2980" target="_blank">MDPI Mathematics</a>.
+            </p>
+          </div>
+
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bx bxs-book"></i></div>
             <h4 class="title"><a href="/assets/documents/RiSBPSO.pdf" target="_blank">Rule Induction Using Set-Based Particle Swarm Optimisation</a></h4>
@@ -378,8 +384,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxs-book"></i></div>
             <h4 class="title"><a href="/assets/documents/Polynomial_approximation_using_SBPSO.pdf" target="_blank">Polynomial Approximation Using Set-Based Particle Swarm Optimization</a></h4>
-            <p class="description">The SBPSO is an adaptation of the standard PSO for problems in a discrete search
-              space.
+            <p class="description">The SBPSO is an adaptation of the standard PSO for problems in a discrete search space.
               This algorithm was applied to solve regression problems and published for the <a href="http://www.iasei.org/icsi2021/" target="_blank">International Conference on Swarm Intelligence (2021)</a>.
             </p>
           </div>
