--- a/index.html
+++ b/index.html
@@ -69,15 +69,14 @@
             Science student.
             I'm currently doing my PhD in machine learning and artificial intelligence under the supervision of Professor A.P.
             Engelbrecht. <br><br>
-            I lived in Majuba Men's Residence and had the privilege to serve on the leadership of the House.
-            My experiences on the House Committee, as Primarius and as Vice-Primarius have taught me a lot about myself
-            and made me a more rounded person.
+            During my undergrad and Masters, I lived in Majuba Men's Residence and had the privilege to serve on the leadership of the House.
+            My experiences on the House Committee, as Primarius and as Vice-Primarius were phenomenal and have had a great impact on my views and capabilities.
             These experiences have taught me how to lead, manage my time, make sacrifices and to be part of something
             bigger than myself. <br><br>
-            Research has become my passion and I aim to continue making contributions to the Computational Intelligence community.
-            Today we search for new applications and adaptations of Set-Based Particle Swarm Optimization algorithms, or
-            develop new exploration mechanisms for dynamic environments;
-            but fundamentally, it's the pursuit of knowledge that has fascinated mankind for millennia.
+            Research has become my passion and I aim to continue making contributions to the artificial intelligence community.
+            My Master's thesis, "Rule Induction using Swarm Intelligence", made new contribution in the field of explainable artificial intelligence with the idea that transparent models are more interpretable and therefore trustworthy.
+            My PhD thesis is focused on automated machine learning, specifically the use of concepts from quantum mechanics to improve state-of-the-art optimisation methods.
+            Automated machine learning aims to democratise the power of modern day artificial intelligence, by making tools more readily available to non-technical users.
           </p>
         </div>
 
@@ -260,6 +259,14 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Part-time</h4>
+              <h5>2023</h5>
+              <p><em>Stellenbosch University, Stellenbosch, RSA</em> (<a href="https://www.sun.ac.za/" target="_blank">SUN</a>)</p>
+              <ul>
+                <li>Worked as marker and guest lecturer for MEng (Ind)</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Part-time</h4>
               <h5>Mar 2021</h5>
               <p><em>Merlynn Intelligence Technologies, Centurion, RSA</em> (<a href="https://www.merlynn-ai.com/" target="_blank">merlynn-ai.co.za</a>)</p>
               <ul>
@@ -303,46 +310,46 @@
         <div class="row skills-content">
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
-              <span class="skill">Particle Swarm Optimization <i class="val">90%</i></span>
+              <span class="skill">Particle Swarm Optimisation <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">Genetic Programming <i class="val">80%</i></span>
+              <span class="skill">Genetic Programming <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">Genetic Algorithms <i class="val">75%</i></span>
+              <span class="skill">Combinatorial Optimisation <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
-              <span class="skill">Neural Networks <i class="val">50%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-            <div class="progress">
-              <span class="skill">Model Trees <i class="val">80%</i></span>
+              <span class="skill">Neural Networks <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">Regression Testing <i class="val">85%</i></span>
+              <span class="skill">Rule Induction <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">Quantum Mechanics <i class="val">15%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -569,7 +576,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>jeanpierrevanzyl -at- protonmail -dot- com or 20706413 -at- sun -dot- ac -dot- za</p>
+                <p>jeanpierrevanzyl -at- proton -dot- me or 20706413 -at- sun -dot- ac -dot- za</p>
               </div>
 
               <div class="phone">
