personal section update

--- a/index.html
+++ b/index.html
@@ -87,13 +87,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Personal information.</h3>
             <p class="font-italic">
-              I like open-source, but I like money more. Although I donate to Wikipedia so I guess that's a start.<br>
-              The only social media I have is LinkedIn, for a few reasons. Most social media platforms are designed to subconsciously addict you to their product, I don't appreciate that.
-              Many of these tech companies follow the privacy laws (which can't keep up with innovation to start with) just enough so that their actions aren't classified as spying;
-              but they have no respect for your privacy.<br>
-              Removing social media from your life can be described as liberating, and certainly makes you more productive.
-              A hugely overlooked aspect of our 21st century lives is our relationship with our smartphones.
-              Make sure that you use your smartphone, and not that it controls you.
+              In my spare time I enjoy triathlon training, pretending that my problems don't exist, shouting at the TV, volunteering for SANParks, and making cocktails.<br>
+              If you want to know whether I want to create an AI that takes over the world, the answer is yes.
             </p>
             <div class="row">
               <div class="col-lg-6">
