--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello traveller, welcome to my personal portfolio.<br> I'm Jean-Pierre, a Stellenbosch University Computer
-            Science student.
+          <p>Hi there, welcome to my personal portfolio.<br> 
+            I'm Jean-Pierre, a Stellenbosch University Computer Science student.
             I'm currently doing my PhD in machine learning and artificial intelligence under the supervision of Professor A.P.
             Engelbrecht. <br><br>
             During my undergrad and Masters, I lived in Majuba Men's Residence and had the privilege to serve on the leadership of the House.
