Fixed first email instance

--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Current Occupation:</strong> Student</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MSc</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> jeanpierrevanzyl -at- protonmail
-                    -dot- com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> jeanpierrevanzyl -at- proton -dot- me</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -245,7 +244,7 @@
               <h5>2012 - 2016</h5>
               <p><em>Fairmont High School, Durbanville, RSA</em></p>
               <ul>
-                <li>Obtained with 86.4% average over 8 subjects</li>
+                <li>Obtained 6 distinctions</li>
               </ul>
             </div>
           </div>
