--- a/index.html
+++ b/index.html
@@ -252,9 +252,17 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Funding</h4>
+              <h5>2023</h5>
+              <p><em>BMW IT Hub, Pretoria, RSA</em> (<a href="https://www.bmwithub.co.za/" target="_blank">bmwithub.co.za</a>)</p>
+              <ul>
+                <li>PhD funded by BMW as a contractor for the IT Hub</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Part-time</h4>
               <h5>2023</h5>
-              <p><em>Stellenbosch University, Stellenbosch, RSA</em> (<a href="https://www.sun.ac.za/" target="_blank">SUN</a>)</p>
+              <p><em>Stellenbosch University, Stellenbosch, RSA</em> (<a href="https://www.ie.sun.ac.za/" target="_blank">ie.sun.ac.za</a>)</p>
               <ul>
                 <li>Worked as marker and guest lecturer for MEng (Ind)</li>
               </ul>
