--- a/html/header.html
+++ b/html/header.html
@@ -2,7 +2,7 @@
 <div class="d-flex flex-column">
 
     <div class="profile">
-        <a href="/index.html"><img src="/assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle"></a>
+        <a href="/index.html"><img src="/assets/img/profile-img-sml.jpg" alt="" class="img-fluid rounded-circle"></a>
         <h1 class="text-light"><a href="/index.html">Jean-Pierre van Zyl</a></h1>
         <div class="social-links mt-3 text-center">
             <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
