fixed navigation jumps

--- a/html/header.html
+++ b/html/header.html
@@ -2,8 +2,8 @@
 <div class="d-flex flex-column">
 
     <div class="profile">
-        <a href="/index.html"><img src="/assets/img/profile-img-sml.jpg" alt="" class="img-fluid rounded-circle"></a>
-        <h1 class="text-light"><a href="/index.html">Jean-Pierre van Zyl</a></h1>
+        <a href="/"><img src="/assets/img/profile-img-sml.jpg" alt="" class="img-fluid rounded-circle"></a>
+        <h1 class="text-light"><a href="/">Jean-Pierre van Zyl</a></h1>
         <div class="social-links mt-3 text-center">
             <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             <a href="https://www.github.com/jeanpierrevanzyl/" class="github"><i class="bx bxl-github"></i></a>
@@ -13,13 +13,13 @@
 
     <nav class="nav-menu">
         <ul>
-            <li class="active"><a href="/index.html#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-            <li><a href="/index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-            <li><a href="/index.html#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-            <li><a href="/index.html#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
-            <li><a href="/index.html#publications"><i class="bx bx-book-open"></i><span>Publications</span></a></li>
-            <li><a href="/index.html#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-            <li><a href="/index.html#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+            <li class="active"><a href="/#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+            <li><a href="/#about"><i class="bx bx-user"></i> <span>About</span></a></li>
+            <li><a href="/#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+            <li><a href="/#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
+            <li><a href="/#publications"><i class="bx bx-book-open"></i><span>Publications</span></a></li>
+            <li><a href="/#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
+            <li><a href="/#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
         </ul>
     </nav><!-- .nav-menu -->
