--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>PhD in Science in Computer Science (In progress)</h4>
+              <h4>PhD in Computer Science (In progress)</h4>
               <h5>2023 - </h5>
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
               <ul>
