--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <title>Jean-Pierre van Zyl</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Jean-Pierre van Zyl, personal portfolio, Stellenbosch University" name="keywords">
+  <meta content="Jean-Pierre van Zyl" name="author">
 
   <!-- Favicons -->
   <link href="/assets/img/favicon.png" rel="icon">
@@ -51,8 +52,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
         <h1>Jean-Pierre van Zyl</h1>
-        <p>I'm <span class="typed"
-                data-typed-items="a Student, a Developer, an AI Enthusiast, a Noodle, a Coder, a Realist"></span></p>
+        <p>I'm a <span class="typed"
+                data-typed-items="PhD Candidate, Developer, Triathlete, Noodle, Coder, Realist"></span></p>
     </div>
   </section>
   <!-- End Hero -->
