--- a/html/header.html
+++ b/html/header.html
@@ -2,12 +2,12 @@
 <div class="d-flex flex-column">
 
     <div class="profile">
-        <a href="/"><img src="/assets/img/profile-img-sml.jpg" alt="" class="img-fluid rounded-circle"></a>
+        <a href="/"><img src="/assets/img/admin/profile-img-sml.jpg" alt="" class="img-fluid rounded-circle"></a>
         <h1 class="text-light"><a href="/">Jean-Pierre van Zyl</a></h1>
         <div class="social-links mt-3 text-center">
             <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             <a href="https://www.github.com/jeanpierrevanzyl/" class="github"><i class="bx bxl-github"></i></a>
-            <a href="https://scholar.google.com/citations?user=SVc16t8AAAAJ" class="scholar"><i class="bx bx-edit"></i></a>
+            <a href="https://scholar.google.com/citations?user=dAy6c40AAAAJ" class="scholar"><i class="bx bx-edit"></i></a>
         </div>
     </div>
 
@@ -18,8 +18,10 @@
             <li><a href="/#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
             <li><a href="/#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
             <li><a href="/#publications"><i class="bx bx-book-open"></i><span>Publications</span></a></li>
-            <li><a href="/#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-            <li><a href="/#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+            <li><a href="/#students"><i class="bx bx-book"></i><span>Students</span></a></li>
+            <li><a href="/#portfolio"><i class="bx bx-book-content"></i>Portfolio</a></li>
+            <li><a href="/#unrelated"><i class="bx bx-camera"></i>Unrelated</a></li>
+            <li><a href="/#contact"><i class="bx bx-envelope"></i>Contact</a></li>
 
         </ul>
     </nav><!-- .nav-menu -->
