--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
   <div class="hero-container" data-aos="fade-in">
     <h1>Jean-Pierre van Zyl</h1>
     <p>I'm <span class="typed"
-        data-typed-items="a Student, a Developer, an AI Enthusiast, a Noodle, a Coder, a Realist"></span></p>
+        data-typed-items="a PhD Candidate, a Developer, an AI Enthusiast, a Wannabe Triathlete, a Coder, a Realist"></span></p>
   </div>
 </section>
 <!-- End Hero -->
@@ -21,19 +21,21 @@ title: Home
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Hi there, welcome to my personal portfolio.<br>
-          I'm Jean-Pierre, a Stellenbosch University Computer Science student.
-          I'm currently doing my PhD in machine learning and artificial intelligence under the supervision of
-          Professor A.P.
-          Engelbrecht. <br><br>
-          My Master's thesis, "Rule Induction using Swarm Intelligence", made new contribution in the field of
-          explainable artificial intelligence with the idea that transparent models are more interpretable and
-          therefore trustworthy.
+        <p>Hi there, welcome to my personal portfolio.
+          <br>
+          I'm Jean-Pierre, a Stellenbosch University Computer Science PhD candidate.
+          Working under the supervision of Professor A.P. Engelbrecht, my work explores the frontier of optimisation and machine learning, with a specific focus on making powerful technology both accessible and understandable.
+          My current PhD thesis is focused on combinatorial optimisation advancements and the application to automated machine learning.
+          Automated machine learning aims to democratise the power of modern day artificial intelligence, by making tools more readily available to non-technical users.
           <br><br>
-          My PhD thesis is focused on automated machine learning, specifically the use of concepts from quantum
-          mechanics to improve state-of-the-art optimisation methods.
-          Automated machine learning aims to democratise the power of modern day artificial intelligence, by making
-          tools more readily available to non-technical users.
+          My Master's thesis, "Rule Induction using Swarm Intelligence", made a contribution in the field of explainable artificial intelligence with the idea that transparent models are more interpretable and therefore trustworthy.
+          The thesis developed a new approach to extracting rules from tabular datasets by using the set-based particle swarm optimisation algorithm.
+          The project contained multiple phases, including developing single-objective and multi-objective definitions of rule induction, as well as analysing the effect that different robust and non-robust classification metrics have on the approaches.
+          <br><br>
+          In my spare time I enjoy triathlon training, pretending that my problems don't exist, film photography, volunteering for SANParks, and making cocktails.
+          The majority of my undergrad and masters degrees were profoundly involved with student leadership, through house leadership and student societies.
+          If you want to know whether I want to create an AI that takes over the world, the answer is yes.
+          But I'll settle for one which makes a lot of money.
         </p>
       </div>
 
@@ -44,34 +46,28 @@ title: Home
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Personal information.</h3>
           <p class="font-italic">
-            In my spare time I enjoy triathlon training, pretending that my problems don't exist, shouting at the TV,
-            volunteering for SANParks, and making cocktails.<br>
-            If you want to know whether I want to create an AI that takes over the world, the answer is yes.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong><a
-                    href="https://jeanpierrevanzyl.github.io/"> jeanpierrevanzyl.github.io</a></li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> You'll have to buy me a drink first
+                <li><i class="icofont-rounded-right"></i> <strong>Website:&nbsp </strong> <a href="https://jeanpierrevanzyl.github.io/">
+                    jeanpierrevanzyl.github.io</a></li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:&nbsp </strong> You'll have to buy me a drink first
                 </li>
-                <li><i class="icofont-rounded-right"></i> <strong>Institution:</strong> Stellenbosch University</li>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Stellenbosch, RSA</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Institution:&nbsp </strong> Stellenbosch University</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:&nbsp </strong> Stellenbosch, RSA</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Current Occupation:</strong> Student</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MSc</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> vanzylj -at- sun -dot- ac -dot- za
+                <li><i class="icofont-rounded-right"></i> <strong>Occupation:&nbsp </strong> Junior Lecturer, PhD candidate</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:&nbsp </strong> MSc</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:&nbsp </strong> vanzylj -at- sun -dot- ac -dot- za
                 </li>
-                <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Freelance:&nbsp </strong> Available</li>
               </ul>
             </div>
           </div>
-          <p>
-            The internet is no place to get to know someone, take a walk outside.
-          </p>
         </div>
       </div>
 
@@ -84,7 +80,7 @@ title: Home
 
     <div class="section-title">
       <h2>Resume</h2>
-      <p>I am a hard-working individual with a well-rounded set of skills stemming from years of experience in student leadership and extra-mural activities including musical theatre and sport. I aim to live a balanced lifestyle to ensure that I always perform to the best of my abilities.</p>
+      <p>Hereby a summary of my education and previous work experience.</p>
     </div>
 
     <div class="row">
